--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "date-fns": "^3.6.0",
     "dropzone": "^6.0.0-beta.2",
     "lucide-react": "^0.469.0",
-    "next": "15.1.2",
+    "next": "^15.1.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
