--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.469.0",
     "next": "^15.1.3",
     "next-auth": "^4.24.11",
+    "next-update": "^3.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
