--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "postinstall": "prisma generate && prisma migrate deploy"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-popover": "^1.1.4",
@@ -29,6 +34,7 @@
     "date-fns": "^3.6.0",
     "dropzone": "^6.0.0-beta.2",
     "lucide-react": "^0.469.0",
+    "minimist": "^1.2.8",
     "next": "^15.1.3",
     "next-auth": "^4.24.11",
     "next-update": "^3.6.0",
